# dotfiles

./: .bash_aliases  .bashrc  .gitattributes  .gitconfig  .gitleaks.toml  .justfile  CLAUDE.md  Makefile  README.md  TODO.md  install.conf.yaml
.claude/: .gitignore  CHANGELOG.md
.claude/commands/: README.md  analyze-skills.md  commit.md  optimize-ruleset.md
.claude/hooks/: hooks.json  inject-sessions.py
.claude/scripts/: permission-analyzer-README.md  permission-analyzer.py
.claude/tools/ptc-wrapper/: pyproject.toml
.claude/tools/ptc-wrapper/examples/: browser_automation.py  multi_url_scrape.py
.claude/tools/ptc-wrapper/src/ptc_wrapper/: __init__.py  cli.py  client.py
.claude/tools/ptc-wrapper/src/ptc_wrapper/mcp/: loader.py  types.py
.claude/tools/ptc-wrapper/src/ptc_wrapper/orchestration/: __init__.py  loop.py
.github/scripts/: check-links.sh  install-gitleaks.sh  pre-commit  validate-templates.sh
home/: .chezmoi.toml.tmpl  .chezmoiignore  .wslconfig.tmpl  dot_bash_aliases.tmpl  dot_bashrc.tmpl  dot_dircolors  dot_docker_aliases.tmpl  dot_gitconfig.tmpl  dot_shell_aliases.tmpl  dot_zprofile  dot_zshrc.tmpl  run_once_after_link-opencode.sh.tmpl  run_once_before_install-packages-windows.ps1.tmpl  run_once_before_install-packages.sh.tmpl  run_once_install-opencode.sh.tmpl  run_once_install-starship.sh.tmpl  run_onchange_before_install-packages.sh.tmpl  run_onchange_install-opencode.sh.tmpl  run_onchange_install-pi.sh.tmpl  run_onchange_install-starship.sh.tmpl
home/AppData/: README.md
playbooks/: initialize-localhost.yml
scripts/: install-repos.sh
(+413 files in other folders)
