[project]
name = "ptc-wrapper"
version = "0.1.0"
description = "Programmatic Tool Calling wrapper for MCP tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[project.scripts]
ptc = "ptc_wrapper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptc_wrapper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
